# rules-scala-compiler-crash

./: .bazelrc  MODULE.bazel  maven_install.json
scala/src/main/scala/com/example/: BUILD  Main.scala
